--- a/source/Spacewar/Spacewar.csproj
+++ b/source/Spacewar/Spacewar.csproj
@@ -53,7 +53,11 @@
   <ItemGroup>
     <Content Include="Icon.ico" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Content\GameFont.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <ItemGroup>
     <Content Include="Content\B1_stars.xnb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
